--- a/src/Components/ColorPicker.css
+++ b/src/Components/ColorPicker.css
@@ -10,10 +10,12 @@ body {
     justify-content: space-around;
     align-items: center;
     flex-wrap: wrap;
+    width: 1200px;
+    margin: 0 auto;
 }
 
 .box {
-    width: 250px;
+    width: 220px;
     height: 300px;
     margin: 20px auto;
     box-shadow: rgba(14, 30, 37, 0.12) 0px 2px 4px 0px, rgba(14, 30, 37, 0.32) 0px 2px 16px 0px;
@@ -21,5 +23,15 @@ body {
 
 .bg {
     width: 100%;
-    height: 240px;
+    height: 220px;
+}
+
+.details {
+    display: flex;
+    flex-direction: column;
+}
+
+.details h4 {
+    padding-left: 20px;
+    padding-bottom: 0;
 }
